# splines

./: .gitignore  CMakeLists.txt  Friday.txt  README
common/: CMakeLists.txt  cylinder.cpp  cylinder.h  matrixstack.cpp  matrixstack.h  noise.h  sphere.cpp  sphere.h  square.cpp  square.h
labs/01/: CMakeLists.txt  mainwindow.ui  myimagebox.cpp  myimagebox.h
projects/: CMakeLists.txt
projects/01/: CMakeLists.txt
projects/02/: CMakeLists.txt  drawable.h  fshader.glsl  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  rectangle.h  triangle.cpp  triangle.h  vshader.glsl
projects/04/: CMakeLists.txt  camera.h  mypanelopengl.cpp  mypanelopengl.h  parseData.cpp  solarData.txt  vshader.glsl
projects/07/: CMakeLists.txt  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  myplant.txt  parser.h  plant.cpp  plant.h  production.h
projects/08/: CMakeLists.txt  maxval.cu
projects/raytracer/: CMakeLists.txt  input.txt  makescene.cpp  material.h  raytracer.cpp  raytracer.h  shape.h  sphere.h
w01-intro/: CMakeLists.txt  rgbColor.h  rgbImage.h
w01-intro/Chapter02/: CMakeLists.txt  example1.cpp
w01-intro/common/: CMakeLists.txt
w01-intro/include/: Angel.h  mat.h
w01-intro/pngtest/: CMakeLists.txt  png_reader.cpp  png_reader.h  png_writer.cpp  png_writer.h  rgbImage.cpp  test_rgb.cpp
w01-intro/qtImage/: CMakeLists.txt
w01-intro/qtTestOGL/: CMakeLists.txt  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h
w01-intro/simpletests/: CMakeLists.txt  helloCS40.cpp  mathTest1.cpp  mathTest2.cpp
w02-opengl/: CMakeLists.txt
w02-opengl/qtogl/: CMakeLists.txt  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl
w03-geometry/: CMakeLists.txt  testvec3d.cpp  vector3d.cpp  vector3d.h
w04-colorVBO/: CMakeLists.txt  fshader.glsl  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl
w05-3D/cube/: CMakeLists.txt  fshader.glsl  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl
w05-3D/sphere/: CMakeLists.txt  fshader.glsl  mypanelopengl.cpp  mypanelopengl.h  sphere.cpp  sphere.h  vshader.glsl
w07-lighting/: CMakeLists.txt  ffraglight.glsl  fshader.glsl  mypanelopengl.cpp  mypanelopengl.h  vfraglight.glsl  vshader.glsl
w08-noise/: CMakeLists.txt  fshader.glsl  fshader2.glsl  mypanelopengl.cpp  mypanelopengl.h  noise.cpp  test_noise.cpp
w09-grammar/: CMakeLists.txt  fshader.glsl  mypanelopengl.cpp  mypanelopengl.h  test_noise.cpp
w10-particles/: CMakeLists.txt  fshader.glsl  fshader2.glsl  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl  vshader2.glsl
w11-cuda/: CMakeLists.txt
w12-cuda/: CMakeLists.txt  ray.cu  ray_noconst.cu
w13-cuda/: CMakeLists.txt  cudahelpers.cu  cudahelpers.h  fshader.glsl  gpu_anim.h  heat.cu  julia_gpu.cu  mypanelopengl.cpp  mypanelopengl.h  shared_bitmap.cu  vshader.glsl
